Code refactoring and cleaning